# tigrinho-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-rust.yml  ci.yml
tigrinho_cli/: Cargo.toml
tigrinho_cli/src/: main.rs
tigrinho_core/: Cargo.toml
tigrinho_core/examples/: spin.rs
tigrinho_core/src/: engine.rs  lib.rs  paytable.rs  rng.rs  symbols.rs
tigrinho_core/tests/: core_tests.rs
tigrinho_server/: Cargo.toml
tigrinho_server/migrations/: 0001_init.sql
tigrinho_server/src/: main.rs
tigrinho_shared/: Cargo.toml
tigrinho_shared/src/: lib.rs
tigrinho_wasm/: Cargo.toml  Trunk.toml  index.html
tigrinho_wasm/src/: lib.rs
