[package]
name = "tigrinho_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
axum-extra = { version = "0.9", features=["typed-header"] }

# local crates
tigrinho_core = { path = "../tigrinho_core" }
tigrinho_shared = { path = "../tigrinho_shared" }

[features]
# enable sqlx offline if needed later

